<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/listChoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageViewID"
                android:text="@string/chore_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/imageViewID"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/listAssignedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listChoreName"
                android:layout_toRightOf="@id/imageViewID"
                android:text="@string/assigndby_2"
                android:layout_toEndOf="@id/imageViewID" />

            <TextView
                android:id="@+id/listAssignedTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listAssignedBy"
                android:layout_toRightOf="@id/imageViewID"
                android:text="@string/assignedby_3"
                android:textStyle="italic"
                android:layout_toEndOf="@id/imageViewID" />

            <TextView
                android:id="@+id/listDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageViewID"
                android:layout_alignParentRight="true"
                android:text="@string/date_12_april_2017"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/listEditButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@android:drawable/ic_menu_edit"
                android:elevation="11dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp" />

            <Button
                android:id="@+id/listDeleteButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"

                android:background="@android:drawable/ic_delete"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="9dp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>